--- a/build.xml
+++ b/build.xml
@@ -54,7 +54,7 @@
     <apply executable="php" failonerror="true">
       <arg value="-l" />
 
-      <fileset dir="${basedir}/src">
+      <fileset dir="${basedir}/public/app/code/local">
         <include name="**/*.php" />
         <modified />
       </fileset>
@@ -70,7 +70,7 @@
     <exec executable="bin/phploc">
       <arg value="--log-csv" />
       <arg value="${basedir}/build/logs/phploc.csv" />
-      <arg path="${basedir}/src" />
+      <arg path="${basedir}/public/app/code/local" />
     </exec>
   </target>
 
@@ -79,14 +79,14 @@
       <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
       <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
       <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-      <arg path="${basedir}/src" />
+      <arg path="${basedir}/public/app/code/local" />
     </exec>
   </target>
 
   <target name="phpmd"
      description="Perform project mess detection using PHPMD and print human readable output. Intended for usage on the command line before committing.">
     <exec executable="bin/phpmd">
-      <arg path="${basedir}/src" />
+      <arg path="${basedir}/public/app/code/local" />
       <arg value="text" />
       <arg value="${basedir}/phpmd.xml" />
     </exec>
@@ -94,7 +94,7 @@
 
   <target name="phpmd-ci" description="Perform project mess detection using PHPMD creating a log file for the continuous integration server">
     <exec executable="bin/phpmd">
-      <arg path="${basedir}/src" />
+      <arg path="${basedir}/public/app/code/local" />
       <arg value="xml" />
       <arg value="${basedir}/phpmd.xml" />
       <arg value="--reportfile" />
@@ -105,8 +105,8 @@
   <target name="phpcs"
      description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
     <exec executable="bin/phpcs">
-      <arg value="--standard=PSR2" />
-      <arg path="${basedir}/src" />
+      <arg value="--standard=PSR2"/>
+      <arg path="${basedir}/public/app/code/local"/>
     </exec>
   </target>
 
@@ -114,8 +114,8 @@
     <exec executable="bin/phpcs">
       <arg value="--report=checkstyle" />
       <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
-      <arg value="--standard=PSR2" />
-      <arg path="${basedir}/src" />
+      <arg value="--standard=PSR2"/>
+      <arg path="${basedir}/public/app/code/local"/>
     </exec>
   </target>
 
@@ -123,7 +123,7 @@
     <exec executable="bin/phpcpd">
       <arg value="--log-pmd" />
       <arg value="${basedir}/build/logs/pmd-cpd.xml" />
-      <arg path="${basedir}/src" />
+      <arg path="${basedir}/public/app/code/local" />
     </exec>
   </target>
 
@@ -146,7 +146,7 @@
       <arg value="--log" />
       <arg path="${basedir}/build/logs" />
       <arg value="--source" />
-      <arg path="${basedir}/src" />
+      <arg path="${basedir}/public/app/code/local" />
       <arg value="--output" />
       <arg path="${basedir}/build/code-browser" />
     </exec>
