Update PageObjectExtension config
Updated the behat.yml config as per PageObjectExtension doc recommandation:
http://behat-page-object-extension.readthedocs.org/en/latest/guide/installation.html

--- a/behat.yml
+++ b/behat.yml
@@ -1,9 +1,9 @@
 default:
   extensions:
     MageTest\MagentoExtension\Extension: ~
-    SensioLabs\Behat\PageObjectExtension\Extension:
+    SensioLabs\Behat\PageObjectExtension:
       namespaces:
-        page: features\bootstrap\Page
+        page: [Page]
     Behat\MinkExtension\Extension:
       base_url: 'http://{{hostname}}/'
       goutte:
