Update dependencies to new versions, update Behat.yml, add composer and composer patcher

--- a/behat.yml
+++ b/behat.yml
@@ -1,10 +1,10 @@
 default:
   extensions:
     MageTest\MagentoExtension\Extension: ~
-    SensioLabs\Behat\PageObjectExtension\Extension:
+    SensioLabs\Behat\PageObjectExtension:
       namespaces:
-        page: features\bootstrap\Page
-    Behat\MinkExtension\Extension:
+        page: [Page]
+    Behat\MinkExtension:
       base_url: 'http://{{hostname}}/'
       goutte:
         guzzle_parameters:
