--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     },
     {
       "type": "vcs",
-      "url": "https://github.com/inviqa/magento-composer-installer.git"
+      "url": "https://github.com/jamescowie/composer-patcher.git"
     },
     {
       "type": "vcs",
-      "url": "https://github.com/jamescowie/composer-patcher.git"
+      "url": "git@github.com:inviqa/magento-version-checker.git"
     }
   ],
   "require": {
     "php": ">=5.4.0",
+    "inviqa/magento-version-checker": "*",
     "magento-hackathon/magento-composer-installer": "~3",
     "jamescowie/composer-patcher": "dev-master"
   },
@@ -57,7 +58,6 @@
     "patches": {
       "magento": {
         "autoloader-patch": {
-          "name": "Autoloader-patcher",
           "title": "Allow composer autoloader to be applied to Mage.php",
           "url": "https://raw.githubusercontent.com/inviqa/magento-patches/magento-composer-autoloader-patch/composer-autoloader/0001-Adding-Composer-autoloader-to-Mage.patch?token=AA3sXKf7NEkV25PjHZcpYlQOsUezdD7Rks5VUkqNwA%3D%3D"
         }
@@ -65,11 +65,8 @@
     }
   },
   "scripts": {
-    "post-install-cmd": [
-      "php bin/autoloader-patcher"
-    ],
-    "post-update-cmd": [
-      "php bin/autoloader-patcher"
-    ]
-  }
+    "post-install-cmd": [ "Inviqa\\Command::patch" ],
+    "post-update-cmd": [ "Inviqa\\Command::patch" ]
+  },
+  "minimum-stability": "dev"
 }
