--- a/tools/vagrant/Vagrantfile
+++ b/tools/vagrant/Vagrantfile
@@ -37,8 +37,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     overrides.ssh.forward_agent = true
 
     # Box configuration
-    overrides.vm.box = 'CentOS-6.6-stack+php56+nginx-0.2.0'
-    overrides.vm.box_url = 'http://invi.qa/1yPpmmn'
+    overrides.vm.box = 'CentOS-6.6-stack+php55+nginx-0.2.0'
+    overrides.vm.box_url = 'http://invi.qa/1DaghZb'
 
     # Shared folders
     mount_options = ["dmode=777", "fmode=777"]
