Update magento config to use PHP redis
Magento has problems with the PECL redis module, and so most projects have had to set this setting.

It's not always suitable to use this, however, so it's being set in the seed instead of magento-ng cookbook

--- a/tools/chef/roles/project-web.json
+++ b/tools/chef/roles/project-web.json
@@ -16,10 +16,9 @@
     "role[web-magento]"
   ],
   "default_attributes": {
-    "nginx": {
-      "shared_config": {
-        "magento": {
-        }
+    "magento": {
+      "redis": {
+        "force_standalone": "1"
       }
     },
     "packages": [ "git" ],
