Change redis role in run_lists to redis30 to match upstream

--- a/tools/chef/roles/project-web.json
+++ b/tools/chef/roles/project-web.json
@@ -9,7 +9,7 @@
     "role[db-mysql56-client]",
     "role[php56]",
     "role[web-nginx]",
-    "role[redis]",
+    "role[redis30]",
     "role[memcache]",
     "recipe[config-driven-helper::capistrano]",
     "recipe[config-driven-helper::packages]",
