Add magento-root-dir to the seed

--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,8 @@
             ],
             "Mage" : "public/app/code/core"
         }
+    },
+    "extra": {
+        "magento-root-dir": "public"
     }
 }
