--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "behat/mink-goutte-driver": "^1.2",
         "behat/mink-selenium2-driver": "^1.3",
         "sensiolabs/behat-page-object-extension": "^2.1",
+        "magetest/magento-phpspec-extension": "^4.0",
         "squizlabs/php_codesniffer": "2.*",
         "phpmd/phpmd": "2.*",
         "sebastian/phpcpd": "2.*",
