--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
         "php": ">=5.6.0",
-        "inviqa/magento-symfony-container": "^1.1"
+        "inviqa/magento-symfony-container": "^1.1",
+        "symfony/proxy-manager-bridge": "^2.6.13",
+        "ocramius/proxy-manager": "^1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.4",
